Added charts and complete PlayerIdPage

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # This is a gitignore file. Folders and file types in here will not
 # be added to version control and will not be uploaded to Github.
 old_tries/
+Old/
 
 # dependencies
 /node_modules
